<resources>
    <string name="app_name">Free Mobility</string>
    <string name="free_mobility">FREE MOBILITY</string>
    <string name="go_on_with_your_life">Go On With Your Life</string>
    <string name="admin_portal">Admin Portal</string>
    <string name="customer_portal">Customer Portal</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password"> Forgot Password? </string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_reset_link">Send Reset-Link</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="stop">Stop</string>
    <string name="current_number">Current Number:</string>
    <string name="queue_length">Queue Length:</string>
    <string name="customers_left">customers Left:</string>
    <string name="avg_time">Avg. Time:</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="last_number">Last Number</string>
    <string name="current_number_on_call">Current Number On Call</string>
    <string name="your_expected_number">Your expected Number</string>
    <string name="eta_of_your_turn">ETA of your Turn:</string>
    <string name="enter_queue">Enter Queue</string>
    <string name="textview">TextView</string>
    <string name="nil">nil</string>
    <string name="your_queue_number">Your number:</string>
    <string name="exit_queue">Exit Queue</string>
    <string name="you_can_t_enter_the_queue_at_the_moment_please_try_again_later">You can\'t enter the Queue at the moment, Please try again later :)</string>
</resources>