<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AfterAdminLogin">

    <TextView
        android:id="@+id/banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/free_mobility"
        android:textAlignment="center"
        android:textColor="#8F3D3D"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bannerDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_on_with_your_life"
        android:textColor="#8F3D3D"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bannerDescription">

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#8F3D3D"
            android:onClick="startButtonClicked"
            android:text="@string/start"
            android:textSize="24sp"
            app:cornerRadius="24dp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#8F3D3D"
            android:onClick="nextButtonClicked"
            android:text="@string/next"
            android:textSize="24sp"
            app:cornerRadius="24dp" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#8F3D3D"
            android:onClick="pauseButtonClicked"
            android:text="@string/pause"
            android:textSize="24sp"
            app:cornerRadius="24dp" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#8F3D3D"
            android:onClick="resetButtonClicked"
            android:text="@string/reset"
            android:textSize="24sp"
            app:cornerRadius="24dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/bannerDescription">

        <TextView
            android:id="@+id/currentQueueNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingTop="16dp"
            android:text="@string/current_number"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/queueLengthTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingTop="16dp"
            android:text="@string/queue_length"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/customersLeftTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingTop="16dp"
            android:text="@string/customers_left"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/averageTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingTop="16dp"
            android:text="@string/avg_time"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>